# prime_sample

./: Dockerfile  README.md  app.py  pyproject.toml  test_primes.py
static/: main.css
templates/: index.html  primes.html
